2000-12-01    <tntdevel@brokendreams.net>

	* tocstr.el (tnt-timers-available): Changed the calls of 
	string-as-unibyte to an if statement checking whether or not 
	the function is bound.
	(string-as-unibyte-available): Added.

2000-14-07    <tntdevel@brokendreams.net>

	* tnt.el: Changed minor version number.  Now version 2.3

2000-11-07    <tntdevel@brokendreams.net>

	* tocstr.el (tnt-timers-available): Changed occurances of 
	string-make-unibyte to string-as-unibyte.  This should solve
	the compat problems.

2000-11-06    <tntdevel@brokendreams.net>

	* tocstr.el: (tocstr-init-receiver): the logic here was reversed and 
	has been fixed to reflect the proper logic.  This should compile
	now.

2000-11-06  Jim Whitehead  <tntdevel@sourceforge.net>

	* tocstr.el (tocstr-filet): changed the definitions to reflect
	the proper them-else
	
2000-11-06  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-buddy-list-point): added.
	(tnt-show-buddies): now switching to the buffer before we build
	it.
	(tnt-build-buddy-buffer): now using globally-stored point, rather
	than locally.
	(tnt-get-buddy-at-point): store point.
	(tnt-next-buddy): store point.
	(tnt-prev-buddy): store point.
	(tnt-next-group): store point.
	(tnt-prev-group): store point.

2000-08-02  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-just-reconnected): added.
	(tnt-just-reconnected-unset-after): added.
	(tnt-unset-just-reconnected): added.  
	(tnt-handle-closed): now only reconnects if we didn't just
	reconnect once.
	(tnt-handle-nick): sets the just-reconnected flag, and starts a
	timer to unset it.

2000-07-31  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backup-or-restore-buddy-list): no longer
	interactive.  now buries the *edit-buddies* buffer.  no longer
	returns buddy-blist.
	(tnt-handle-config): now calls backup-or-restore.
	(tnt-handle-nick): no longer calls backup-or-restore.

2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
